--- a/app/src/main/res/layout/activity_tracker.xml
+++ b/app/src/main/res/layout/activity_tracker.xml
@@ -34,7 +34,8 @@
             android:gravity="center"
             android:textColor="@color/white"
             android:background="@drawable/square_outline"
-            android:text="@string/invasions"/>
+            android:text="@string/invasions"
+            android:onClick="launchInvasions"/>
     </LinearLayout>
 
     <LinearLayout
