Some progress for Darvo, Void Trader, and Sorties. These do not work without Javascript.

--- a/app/src/main/res/layout/activity_tracker.xml
+++ b/app/src/main/res/layout/activity_tracker.xml
@@ -79,7 +79,8 @@
             android:gravity="center"
             android:textColor="@color/white"
             android:background="@drawable/square_outline"
-            android:text="@string/sorties"/>
+            android:text="@string/sorties"
+            android:onClick="launchSorties"/>
 
         <TextView
             android:id="@+id/voidFissuresTextView"
